# StarRust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  index.html
.github/workflows/: deploy-pages.yml
_site/: README.md  index.html  sound.js  star-rust.d.ts  star-rust.js  star-rust_bg.wasm.d.ts
assets/models/: asteroid.glb  basic_boss.glb  basic_enemy.glb  basic_hero.glb  jet_charger.glb  powerup_ico.glb  powerup_star.glb  red_bolt.glb  space_platform.glb  teal_bolt.glb  turret_barrel1.glb  turret_base.glb
blend/Models/: basic_boss.blend  bullets.blend  jet_charger.blend  platform_turret.blend  star-rust.blend  star-rust.blend1  stars.blend
src/: constants.rs  main.rs  pong.rs  tut0.rs  utils.rs
src/game/: background.rs  bullet.rs  collisions.rs  components.rs  constants.rs  despawner.rs  enemy.rs  events.rs  mod.rs  player.rs  resources.rs  ships.rs  walls.rs
src/game/actor/: bullet.rs  mod.rs  ship.rs
src/game/ai/: autofire.rs  mod.rs
src/game/assets/: mod.rs
src/game/audio/: clip.rs  mod.rs
src/game/bullet/: mod.rs  variants.rs
src/game/levels/: lvl.rs  mod.rs
src/game/models/: mod.rs
src/game/particles/: components.rs  mod.rs
src/game/scene/: mod.rs
src/game/ship/: mod.rs  yard.rs
src/game/spawner/: levels.rs  mod.rs
src/game/ui/: mod.rs
src/game/vfx/: mod.rs
src/game/weapon/: mod.rs
src/menus/: mod.rs
