[package]
name = "star-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.14.2", features = ["webgpu"]}
bevy_hanabi = "0.12.2"
fastrand = "2.1.1"

[workspace]
resolver ="2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
